Fix styling on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ main {
 
 	.logo img {
 		grid-row: 1 / span 2;
-		height: 100%;
+		height: 3em;
 	}
 
 #features {
